objects/National_Support_Request__c.object
<CustomObject>
    <fields>
        <fullName>National_Multiplier__c</fullName>
        <inlineHelpText>For Web Dev cases where one case represents changes to multiple accounts (MANAGER APPROVAL NEEDED)</inlineHelpText>
        <label>National Multiplier</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>National_Relationship_Type__c</fullName>
        <label>National Relationship Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Manufacturer</fullName>
                </value>
                <value>
                    <fullName>Franchise</fullName>
                </value>
                <value>
                    <fullName>Multi-Location</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>National_Type__c</fullName>
        <formula>TEXT(Account_Name__r.National_Type__c)</formula>
        <label>National Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Needs_Assessment_Date_Time__c</fullName>
        <label>Needs Assessment Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>New_Participating_Number_of_Locations__c</fullName>
        <label>Participating Number of Locations</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Notify_Finance_of_any_Changes__c</fullName>
        <defaultValue>false</defaultValue>
        <label>8. Notify Finance of any Changes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number_of_Initial_Locations__c</fullName>
        <label>Number of Initial Locations</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Potential_Locations__c</fullName>
        <label>Number of Potential Locations</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Of_Accounts_Onboarding__c</fullName>
        <label># Of Accounts Currently On Board</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Of_New_Accounts__c</fullName>
        <label># Of New Accounts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>National Support Requests</relationshipLabel>
        <relationshipName>National_Support_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opt_Frequency__c</fullName>
        <inlineHelpText>At what frequency for each marketing channel are you optimizing and making changes</inlineHelpText>
        <label>Opt Frequency</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Optimization_Duration__c</fullName>
        <label>Optimization Duration</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Evaluative</fullName>
                </value>
                <value>
                    <fullName>Basic</fullName>
                </value>
                <value>
                    <fullName>Thorough</fullName>
                </value>
                <value>
                    <fullName>Extensive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Organic_Analysis_Details__c</fullName>
        <label>Organic Analysis Details</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Organic_Fee_per_Location_C__c</fullName>
        <label>Organic Fee per Location C</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Organic_Ranking_Grade__c</fullName>
        <label>Organic Ranking Grade</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Organic__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Organic:</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Organic_per_location__c</fullName>
        <formula>Proposed_Pricing_Organic_fee_location__c</formula>
        <label>Organic (per location)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PPC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PPC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PPL_Lead_Estimates__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PPL/Lead Estimates</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Participating_Number_of_Locations__c</fullName>
        <formula>Estimated_Number_locations__c</formula>
        <label>Participating Number of Locations</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Past_Current_Pain_Points__c</fullName>
        <label>Past &amp; Current Pain Points</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Performance_Estimates__c</fullName>
        <label>Performance Estimates</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Performing_SEO_Process_Today__c</fullName>
        <inlineHelpText>Are they performing any SEO process today, if so what have they done</inlineHelpText>
        <label>Performing SEO Process Today</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Potential_Budget__c</fullName>
        <label>Potential Budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Potential_Budget_per_Location__c</fullName>
        <label>Potential Budget per Location ($)</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Potential_of_Accounts__c</fullName>
        <label>Potential # of Accounts</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Products_Listed_in_the_Contract__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Products Listed in the Contract</inlineHelpText>
        <label>Sponsored:</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Products_Purchased__c</fullName>
        <label>Products Purchased</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Projected_Tier__c</fullName>
        <label>Projected Tier</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Projected_Tier_del__c</fullName>
        <label>Projected Tier2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>tier1</fullName>
                </value>
                <value>
                    <fullName>tier2</fullName>
                </value>
                <value>
                    <fullName>tier3</fullName>
                </value>
                <value>
                    <fullName>tier4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Proposal_Approved_CS__c</fullName>
        <label>Proposal Approved CS</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Proposal_Approved_Finance__c</fullName>
        <label>Proposal Approved Finance</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Proposal_Approved_Product__c</fullName>
        <label>Proposal Approved Product</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Proposal_Approved_Sales__c</fullName>
        <label>Proposal Approved Sales</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Proposal_Approved_by_Sales__c</fullName>
        <label>Proposal Approved by Sales</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Proposal_Assistance__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Proposal or Strategy Assistance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Proposal_Attached_and_Ready_for_Review__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Proposal Attached and Ready for Review</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Proposed_Pricing_MMF_per_Location__c</fullName>
        <label>Yodle Web Fee per Location</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Proposed_Pricing_Organic_fee_location__c</fullName>
        <label>Organic fee-location</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Proposed_Pricing_Setup_Fee_per_Location__c</fullName>
        <label>Setup Fee per Location</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Proposed_Pricing_Total_Sponsored_Budget__c</fullName>
        <label>Total Sponsored Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Proposed_Pricing_Website__c</fullName>
        <label>Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Proposed_Product_Client_Side__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Client Side</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Proposed_Product_Custom_Template__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Custom Template</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Proposed_Product_Display__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Display</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Proposed_Product_Metropages__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Metropages</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Proposed_Product_Organic__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Organic</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Proposed_Product_Sponsored__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sponsored</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Prospect_defining_success__c</fullName>
        <inlineHelpText>How is the prospect defining success (target ppl, number of leads, etc.)</inlineHelpText>
        <label>Prospect defining success</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provide_Corporate_URL__c</fullName>
        <label>Provide Corporate URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>RM_Determines_Resourcing_Appropriately__c</fullName>
        <defaultValue>false</defaultValue>
        <label>2.RM Determines Resourcing Appropriately</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RM_Strategic_AM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RM_Strategic AM Assignment</label>
        <referenceTo>User</referenceTo>
        <relationshipName>National_Support_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RM_Strategic_Sales_Review_T_Form__c</fullName>
        <defaultValue>false</defaultValue>
        <label>1. RM, Strategic &amp; Sales Review T-Form</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ranking_Scrape_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When this box is checked, an email to Strategic owner is sent titled "Ranking Scrape Completed".</inlineHelpText>
        <label>Ranking Scrape Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rankings_for_all_locations_or_subset__c</fullName>
        <label>Rankings for all locations or subset</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>all locations</fullName>
                </value>
                <value>
                    <fullName>subset of locations</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ready_Today__c</fullName>
        <label>Ready Today</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Recommended_Products_CRM_Integration__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Recommended Products: CRM Integration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Recommended_Products_Custom_Templates__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Recommended Products: Custom Templates</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Recommended_Products_Display__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Recommended Products: Display</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Recommended_Products_Metropages__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Recommended Products: Metropages</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Recommended_Products_Organic__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Recommended Products: Organic</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Recommended_Products_Sponsored__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Recommended Products: Sponsored</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Recommended_Strategy_Details__c</fullName>
        <label>Recommended Strategy Details</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Relationship_Follow_Up__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Weekly, Bi-Weekly or Monthly - 
Strategic member should be present on at least first performance call.</inlineHelpText>
        <label>10. Relationship Follow Up</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Relationship_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Relationship Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>National_Support_Requests2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Relationship_Manager_or_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Relationship Manager or Lead</label>
        <referenceTo>User</referenceTo>
        <relationshipName>National_Support_Requests7</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Relationship_Name__c</fullName>
        <label>Relationship Name</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Relationship_Owner_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Relationship Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>National_Support_Requests8</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Relationship_Type__c</fullName>
        <label>Relationship Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Franchisee</fullName>
                </value>
                <value>
                    <fullName>Corporate</fullName>
                </value>
                <value>
                    <fullName>Franchisee + Corporate</fullName>
                </value>
                <value>
                    <fullName>Agency</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Relationship_owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Relationship Owner</label>
        <referenceTo>National_Support_Request__c</referenceTo>
        <relationshipLabel>National Support Requests</relationshipLabel>
        <relationshipName>National_Support_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reporting_Review__c</fullName>
        <label>Reporting Review</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Request_Completed_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Request Completed By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>National_Support_Requests3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Required_Changes_for_Contract__c</fullName>
        <label>Required Changes for Contract</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Required_Changes_for_Proposal__c</fullName>
        <label>Required Changes for Proposal</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Response__c</fullName>
        <inlineHelpText>Strategic Team to use to send info back to Sales</inlineHelpText>
        <label>Response to Sales</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Review_Past_Performance_Reports__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Should also include:
- Past Webinars
- Past reporting e-mails
- Any other performance data</inlineHelpText>
        <label>7. Review Past Performance Reports</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Review_Request_Type__c</fullName>
        <label>Review Request Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Proposal</fullName>
                </value>
                <value>
                    <fullName>Contract</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Revised_Contract_Details__c</fullName>
        <inlineHelpText>Revised contract details(please attach updated contract with subject "revised contract and date"</inlineHelpText>
        <label>Revised Contract Details</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SEO_Evaluation__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box if you need evaluation for SEO + Maps</inlineHelpText>
        <label>SEO Evaluation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SEO__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Organic</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sales_Additional_Notes__c</fullName>
        <label>Sales Additional Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Sales_Notes__c</fullName>
        <label>Sales Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Sales_Person__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Person</label>
        <referenceTo>User</referenceTo>
        <relationshipName>National_On_boarding_Support</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Seasonal__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Only use this box if this client's business is seasonally based.</inlineHelpText>
        <label>Seasonal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Segment_Color__c</fullName>
        <label>Segment Color</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Green</fullName>
                </value>
                <value>
                    <fullName>Red</fullName>
                </value>
                <value>
                    <fullName>Yellow</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Segment_Options__c</fullName>
        <label>Segment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accountant</fullName>
                </value>
                <value>
                    <fullName>Acupuncturist</fullName>
                </value>
                <value>
                    <fullName>Adoption Services</fullName>
                </value>
                <value>
                    <fullName>Adult Continued Education</fullName>
                </value>
                <value>
                    <fullName>Advertising Services</fullName>
                </value>
                <value>
                    <fullName>Air Duct Cleaning</fullName>
                </value>
                <value>
                    <fullName>Allergists</fullName>
                </value>
                <value>
                    <fullName>Animal &amp; Wildlife Control</fullName>
                </value>
                <value>
                    <fullName>Animal Shelter &amp; Rescue</fullName>
                </value>
                <value>
                    <fullName>Appliance Repair</fullName>
                </value>
                <value>
                    <fullName>Appliance Repair (Fridge &amp; Freezer)</fullName>
                </value>
                <value>
                    <fullName>Appliance Sales</fullName>
                </value>
                <value>
                    <fullName>Arborist</fullName>
                </value>
                <value>
                    <fullName>Architect</fullName>
                </value>
                <value>
                    <fullName>Asphalt Sealcoating and Repair</fullName>
                </value>
                <value>
                    <fullName>Assisted Living Home</fullName>
                </value>
                <value>
                    <fullName>Astrologers, Palm Readers and Psychics</fullName>
                </value>
                <value>
                    <fullName>Auctioneers</fullName>
                </value>
                <value>
                    <fullName>Auto Body Shop</fullName>
                </value>
                <value>
                    <fullName>Auto Customization Shop</fullName>
                </value>
                <value>
                    <fullName>Auto Detailing Service</fullName>
                </value>
                <value>
                    <fullName>Auto Glass Repair Shop</fullName>
                </value>
                <value>
                    <fullName>Auto Painting Shop</fullName>
                </value>
                <value>
                    <fullName>Auto Parts</fullName>
                </value>
                <value>
                    <fullName>Auto Reconditioning</fullName>
                </value>
                <value>
                    <fullName>Auto Relocation</fullName>
                </value>
                <value>
                    <fullName>Auto Repair Shop</fullName>
                </value>
                <value>
                    <fullName>Bail Bondsman Agent</fullName>
                </value>
                <value>
                    <fullName>Bankruptcy Services</fullName>
                </value>
                <value>
                    <fullName>Banks</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Segment_Support_Request__c</fullName>
        <formula>Account_Name__r.Segment_YL__r.Name</formula>
        <label>Segment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Segment_Viability__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Segment Viability</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Segment__c</fullName>
        <inlineHelpText>The segment that most closely matches what this clientâ's business offerings are related to. e.g. Medical Spa, General Contractor</inlineHelpText>
        <label>Segment</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Services_to_Advertise__c</fullName>
        <inlineHelpText>A complete list of all services the client wishes to advertise through Yodle. e.g. Window cleaning or body massages and a/c repair.</inlineHelpText>
        <label>Services to Advertise</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Set__c</fullName>
        <label>Website or Client Side Fee</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Setup_Fee_per_Location_P__c</fullName>
        <label>Setup Fee per Location C</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Setup_Fee_per_location__c</fullName>
        <formula>Proposed_Pricing_Setup_Fee_per_Location__c</formula>
        <label>Setup Fee (per location)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Setup_Review_Walkthrough__c</fullName>
        <label>Setup Review &amp; Walkthrough</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_Implementation_Type__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Site Implementation Type</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Site_Type_Interest__c</fullName>
        <label>Site Type Interest</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Adversite</fullName>
                </value>
                <value>
                    <fullName>OneSite</fullName>
                </value>
                <value>
                    <fullName>Mirror</fullName>
                </value>
                <value>
                    <fullName>Client-Hosted</fullName>
                </value>
                <value>
                    <fullName>ProSite</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Site_Type__c</fullName>
        <label>Site Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Adversite</fullName>
                </value>
                <value>
                    <fullName>OneSite</fullName>
                </value>
                <value>
                    <fullName>Mirror</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Special_Stipulations__c</fullName>
        <inlineHelpText>Any other requests from this client that you would like information about.</inlineHelpText>
        <label>Special Stipulations</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Specific_Services_to_highlight__c</fullName>
        <label>Specific Services to highlight</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Sponsored_Analysis_Current_State__c</fullName>
        <label>Sponsored Analysis - Current State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>currently running local sponsored – to local sites</fullName>
                </value>
                <value>
                    <fullName>currently running local sponsored – to corporate site</fullName>
                </value>
                <value>
                    <fullName>currently running nationwide sponsored -to local sites</fullName>
                </value>
                <value>
                    <fullName>currently running nationwide sponsored – to corporate site</fullName>
                </value>
                <value>
                    <fullName>not running sponsored</fullName>
                </value>
                <value>
                    <fullName>mixed national and local campaigns</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sponsored_Analysis_Details__c</fullName>
        <label>Sponsored Analysis Details</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Sponsored_Grade__c</fullName>
        <label>Sponsored Grade</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Staff_RM_for_Tier_1__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Sale must be at 80% close</inlineHelpText>
        <label>Staff RM for Tier 1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Staffing_Strat__c</fullName>
        <label>Staffing</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Strategic RM</fullName>
                </value>
                <value>
                    <fullName>Strategic Consultant</fullName>
                </value>
                <value>
                    <fullName>RM</fullName>
                </value>
                <value>
                    <fullName>Lead Consultant</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Staffing__c</fullName>
        <label>Staffing</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Strategic</fullName>
                </value>
                <value>
                    <fullName>Split Pod</fullName>
                </value>
                <value>
                    <fullName>Local</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Sent Back to Strategic</fullName>
                </value>
                <value>
                    <fullName>Accepted</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Stage 1 - Needs Assessment</fullName>
                </value>
                <value>
                    <fullName>Stage 2 – Mktg Analysis &amp; Demo</fullName>
                </value>
                <value>
                    <fullName>Stage 3 – Proposal</fullName>
                </value>
                <value>
                    <fullName>Stage 4 – Implementation Plan</fullName>
                </value>
                <value>
                    <fullName>Stage 5 – Contract</fullName>
                </value>
                <value>
                    <fullName>Stage 5C - Closed Lost</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Strategic_Confirmed_Goal__c</fullName>
        <inlineHelpText>For Strategic use ONLY.  Goal should be set/confirmed on the kickoff call or initial CSC.</inlineHelpText>
        <label>Strategic Confirmed Goal</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>